// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatusBadge (snapshot) > matches anonymous snapshot 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold text-white"
    style="background: rgb(148, 163, 184); opacity: 0; transform: scale(0.8);"
  >
    <span
      class="relative flex h-1.5 w-1.5"
    >
      <span
        class="absolute inline-flex h-full w-full animate-ping rounded-full bg-current opacity-75"
      />
      <span
        class="relative inline-flex h-1.5 w-1.5 rounded-full bg-current"
      />
    </span>
    Anonymous
  </span>
</div>
`;

exports[`StatusBadge (snapshot) > matches authenticated snapshot 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold text-white"
    style="background: rgb(34, 197, 94); opacity: 0; transform: scale(0.8);"
  >
    <span
      class="relative flex h-1.5 w-1.5"
    >
      <span
        class="absolute inline-flex h-full w-full animate-ping rounded-full bg-current opacity-75"
      />
      <span
        class="relative inline-flex h-1.5 w-1.5 rounded-full bg-current"
      />
    </span>
    Authenticated
  </span>
</div>
`;

exports[`StatusBadge (snapshot) > matches error snapshot 1`] = `
<div>
  <span
    class="inline-flex items-center gap-1.5 rounded-full px-3 py-1 text-xs font-semibold text-white"
    style="background: rgb(239, 68, 68); opacity: 0; transform: scale(0.8);"
  >
    <span
      class="relative flex h-1.5 w-1.5"
    >
      <span
        class="absolute inline-flex h-full w-full animate-ping rounded-full bg-current opacity-75"
      />
      <span
        class="relative inline-flex h-1.5 w-1.5 rounded-full bg-current"
      />
    </span>
    Error
  </span>
</div>
`;
